--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
 
     <!-- Home/Archive/Links/About Icons -->
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/fontawesome-min.css">
     <!-- Icon透明图片 -->
     <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" />
 
