--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,9 @@
+<!--
+ * @Author: reber
+ * @Mail: reber0ask@qq.com
+ * @Date: 2019-04-10 10:45:01
+ * @LastEditTime: 2019-06-18 15:50:52
+ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +13,6 @@
     <meta name="keywords" content="渗透测试,web安全,漏洞,python,php,linux">
     <meta name="description" content="{{ if .IsNode }}{{ with .Site.Params.Description }}{{ . }}{{ end }}{{ else }}{{ with .Description }}{{ . }}{{ end }}{{ end }}">
     <meta name="author" content="{{ .Site.Params.Author }}">
-    <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/css/pure-min.css">
     {{ "<!--[if lte IE 8]>" | safeHTML }}
     <link rel="stylesheet" type="text/css" href="/css/grids-responsive-old-ie-min.css">
@@ -16,19 +21,12 @@
     <link rel="stylesheet" type="text/css" href="/css/grids-responsive-min.css">
     {{ "<!--<![endif]-->" | safeHTML }}
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <!-- Home/Archive/Links/About Icons -->
-    <link rel="stylesheet" type="text/css" href="/css/fontawesome-min.css">
-    <!-- Icon透明图片 -->
-    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" />
-    <!-- Fonts -->
-    <link rel="stylesheet" type="text/css" href="/css/fonts-googleapis.css">
-    <!-- RSS -->
+    <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css"><!-- Home/Archive/Links/About Icons -->
+    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" /><!-- Icon透明图片 -->
     <link rel="alternate" type="application/rss+xml" title="{{ .Site.Params.Title }}" href="/index.xml" />
-    <!-- Code highlight -->
     <link rel="stylesheet" href="/css/monokai-sublime.css" type="text/css">
     <script src="/js/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <script src="/js/jquery.min.js"></script>
-
 </head>
 <body>
