--- a/layouts/partials/links.html
+++ b/layouts/partials/links.html
@@ -1,3 +1,9 @@
+<!--
+ * @Author: reber
+ * @Mail: reber0ask@qq.com
+ * @Date: 2019-04-10 10:45:01
+ * @LastEditTime: 2019-07-25 14:17:53
+ -->
 
 <div style="padding-bottom:10px;">
     <h2 class="asidetitle">{{ .Site.Params.Strings.Links }}</h2>
@@ -13,6 +19,9 @@
         </li>
         <li style="list-style-type:none;">
             <i class="fa fa-link fa-fw"></i><a href="https://s.yl0.org/" target="_blank">sòng•sec</a>
+        </li>
+        <li style="list-style-type:none;">
+            <i class="fa fa-link fa-fw"></i><a href="https://xj.hk/" target="_blank">星际 HK</a>
         </li>
     </ul>
 </div>
