--- a/layouts/partials/links.html
+++ b/layouts/partials/links.html
@@ -2,7 +2,7 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:01
- * @LastEditTime : 2020-06-22 12:07:48
+ * @LastEditTime: 2021-11-19 17:17:06
  -->
 
 <div style="padding-bottom:10px;">
@@ -18,7 +18,7 @@
             <i class="fa fa-link fa-fw"></i><a href="https://y-hkl.github.io/" target="_blank">Y-HKL's Blog</a>
         </li>
         <li style="list-style-type:none;">
-            <i class="fa fa-link fa-fw"></i><a href="https://s.yl0.org/" target="_blank">sòng•sec</a>
+            <i class="fa fa-link fa-fw"></i><a href="https://www.yl0.org/" target="_blank">sòng•sec</a>
         </li>
     </ul>
 </div>
